--- a/views/goodyear/index.handlebars
+++ b/views/goodyear/index.handlebars
@@ -3,4 +3,10 @@ Choose the form
     <li>
         <a href="/goodyear/Staff_Report_New">Staff Report New</a>
     </li>
+    <li>
+        <a href="/goodyear/Staff_Report_P&Z_NEW">Staff_Report_P&Z_NEW</a>
+    </li>
+    <li>
+        <a href="/goodyear/Communication_Items">Communication Items</a>
+    </li>
 </ul>
