--- a/views/sanmateo/index.handlebars
+++ b/views/sanmateo/index.handlebars
@@ -9,4 +9,8 @@ Choose the form
     <li>
         <a href="/sanmateo/agenda_report_form">Agenda Report Form</a>
     </li>
+    <li>
+        <a href="/sanmateo/agenda_report_form_CCD_AdvancedPlanning">Agenda Report Form: CDD - Advanced Planning</a>
+    </li>
+    
 </ul>
