--- a/views/sanmateo/agenda_report_form_CCD_AdvancedPlanning.handlebars
+++ b/views/sanmateo/agenda_report_form_CCD_AdvancedPlanning.handlebars
@@ -451,7 +451,7 @@
 				}
 			})
 			
-			$("#EnvironmentalDetermination").val("<!DOCTYPE html>" + $('label[for="' + id + '"]').html());
+			$("#EnvironmentalDetermination").val("<!DOCTYPE"$('label[for="' + id + '"]').html());
 			
 			$("#ROW_EnvironmentalDetermination").show();
 		}
