--- a/views/sanmateo/index.handlebars
+++ b/views/sanmateo/index.handlebars
@@ -12,5 +12,8 @@ Choose the form
     <li>
         <a href="/sanmateo/agenda_report_form_CCD_AdvancedPlanning">Agenda Report Form: CDD - Advanced Planning</a>
     </li>
+    <li>
+        <a href="/sanmateo/agenda_report_form_CityClerk">Agenda Report Form: City Clerk</a>
+    </li>
     
 </ul>
