--- a/views/branson/CodeAmendment.handlebars
+++ b/views/branson/CodeAmendment.handlebars
@@ -25,6 +25,8 @@
 	<input type="hidden" name="DeptIdHolder" id="DeptIdHolder" />
 	<input type="hidden" name="DeptHeadId" id="DeptHeadId" />
 	<input type="hidden" name="DivHeadId" id="DivHeadId" />
+	<input type="hidden" name="Document1.DocumentType" id="Document1.DocumentType" value="5"/>
+	<input type="hidden" name="Document1.DocumentName" id="Document1.DocumentName" value="Code Amendment - Staff Report"/>
 
 	<legend>Meeting Information</legend>
 	
@@ -91,10 +93,10 @@
 <div class="row">
 	<!--Item/Subject-->
 	<div class="col-sm-2 form-group">
-		<label for="ItemSubject">Item/Subject:</label>
+		<label for="Subject">Item/Subject:</label>
 	</div>
 	<div class="col-sm-10 form-group">
-		<input type="text" class="form-control" name="ItemSubject" id="ItemSubject" placeholder="Item/Subject">
+		<input type="text" class="form-control" name="Subject" id="Subject" placeholder="Item/Subject">
 	</div>
 	<!--Initiated By-->
 	<div class="col-sm-2 form-group">
@@ -166,9 +168,9 @@
 	</div>
 
 </div>
-<br/>
-<br/>
-<legend>Code Amendment</legend>
+    <br/>
+	<br/>
+	<legend>Code Amendment</legend>
 <div class="row">
     <!--Attached Exhibits-->
 	<div class="col-sm-2 form-group">
