--- a/views/goodyear/Staff_Report_New.handlebars
+++ b/views/goodyear/Staff_Report_New.handlebars
@@ -60,8 +60,6 @@
 			<option value="1">City Council Regular Meeting</option>
 			<option value="2">City Council Special Meeting</option>
 			<option value="8">City Council Work Session</option>
-			<option value="21">City Council Subcommittee: Audit</option>
-			<option value="22">City Council Subcommittee: Boards, Commissions and Committee Appointments</option>
 			<option value="23">City Council Subcommittee: Community Funding Review</option>
 			<option value="24">City Council Subcommittee: Executive Search Firm Selection</option>
 		</select>
@@ -91,7 +89,12 @@
 <div class="row">
 	<div class="col-md-6">
 		<select id="meetingSectionSelect" name="meetingSectionSelect" data-dependent-on="meetingDateSelect"
-			data-field-hasvalue="false" data-field-values="meetingSections" class="form-control "></select>
+			data-field-hasvalue="false" data-field-values="meetingSections" class="form-control ">
+			<option value="1262">COMMUNICATIONS</option>
+			<option value="1263">CONSENT</option>
+			<option value="1264">BUSINESS</option>
+			<option value="1268">PUBLIC HEARINGS</option>
+		</select>
 	</div>
 </div>
 
@@ -137,7 +140,7 @@
 
 <br />
 <br />
-<legend>Staff Report</legend>
+<legend>Council Action Report</legend>
 <input type="hidden" name="MeetingDate" id="MeetingDate" />
 <input type="hidden" name="MeetingDateDisplay" id="MeetingDateDisplay" />
 <div class='row'>
@@ -148,27 +151,37 @@
 		</div>
 	</div>
 </div>
-
+<div class='row'>
+	<div class='col-sm-12'>
+		<div class='form-group'>
+			<label for="Author">Requestor:</label><span style="color: red;">*</span>
+			<input class="form-control" id="Author" name="Author" required="true" type="text" disabled />
+		</div>
+	</div>
+</div>
 <div class='row'>
 	<div class='col-md-12'>
 		<div class='form-group'>
-			<label for="StaffPresenters">STAFF PRESENTERS:</label><span style="color: red;">*</span>
+			<label for="StaffPresenters">Staff Presenter(s):</label><span style="color: red;">*</span>
 			<div class="row">
 				<div class="col-sm-6">
 					<select class="form-control" id="internalUsers" onchange="selectUser(this.id)">
 					</select>
-					<label for="CustomName">Add Custom Name</label>
+					<label for="CustomName">Add Other Presenter(s)</label>
 
 					<div class="input-group">
-						<input type="text" id="CustomName" name="CustomName" value="Name - Title" class="form-control">
+						<input type="text" id="CustomName" name="CustomName" value="Name - Title" class="form-control"
+							onclick="selectElm(this.id)">
 						<div class="input-group-addon"><span onclick="AddCustomUser()">add</span></div>
 
 					</div>
 				</div>
-				<div class="col-sm-6">
-					<textarea class="form-control" name="StaffPresenter" id="StaffPresenter" rows="10"
+				<div id="presentersDisplay" class="col-sm-6 hidden">
+					<ul id="dynamicItemDisplay">
+					</ul>
+					<span id="addPresenters" class="btn btn-primary" onclick="addPresenters()">Add Presenters</span>
+					<textarea class="form-control hidden" name="StaffPresenter" id="StaffPresenter" rows="10"
 						disabled></textarea>
-					<span class="btn btn-default pull-right" onclick="clearForm()">Clear</span>
 				</div>
 			</div>
 		</div>
@@ -218,30 +231,20 @@
 <div class='row'>
 	<div class='col-sm-12'>
 		<div class='form-group'>
-			<label for="Attachments">ATTACHMENTS</label><span style="color: red;">*</span>
+			<label for="Attachments">ATTACHMENT(S)</label><span style="color: red;">*</span>
 			<textarea class="form-control" name="Attachments" id="Attachments" rows="10" cols="160"></textarea>
 		</div>
 	</div>
 </div>
 
-<div class='row'>
-	<div class='col-md-6'>
-		<div class='form-group'>
-			<label for="Author">Author:</label><span style="color: red;">*</span>
-			<input class="form-control" id="Author" name="Author" required="true" type="text" value="" />
-		</div>
-	</div>
-	<div class='col-md-6'>
-		<div class='form-group'>
-			<label for="AuthorTitle">Author Title:</label><span style="color: red;">*</span>
-			<input class="form-control" id="AuthorTitle" name="AuthorTitle" required="true" type="text" value="Founder"
-				readonly />
-		</div>
-	</div>
-</div>
+
 <br />
 <br />
-<legend>Additional Questions</legend>
+<legend>
+	Additional Questions
+	<br>
+	<small><small><small>Will not appear on CAR</small></small></small>
+</legend>
 <div class="row">
 	<div class='col-sm-12'>
 		<div class='form-group'>
@@ -297,38 +300,50 @@
 		</div>
 	</div>
 	<!--Account Code-->
-	<div class='col-sm-12 '>
-		<div class='form-group'>
-			<label for="AccountCode">Account Code</label><span style="color: red;">*</span>
-			<div class="input-group">
-				<input type="text" class="form-control" name="AccountCode" id="AccountCode" pattern="\d{9}-?\d{5}"
-					min-length="14" maxlength="15">
-				<div class="input-group-addon"><span onclick="AddNewCode()">add</span></div>
+	<div class="row procurement_No">
+		<div class='col-sm-6 '>
+			<div class='form-group'>
+				<label for="AccountCode">Account Code(s)</label><span style="color: red;">*</span>
+				<div class="input-group ">
+					<input type="text" class="form-control" name="AccountCode" id="AccountCode" min-length="13"
+						maxlength="14">
+					<div class="input-group-addon"><span onclick="AddNewCode()">add</span></div>
+				</div>
+
 			</div>
-			<div class="">
-				<textarea id="AccountCodes" name="AccountCodes" class="form-control" disabled
-					placeholder="Added Account Codes"></textarea>
-			</div>
+		</div>
+		<div id="AccountCodesDisplay" class="col-sm-6 hidden">
+			<ul id="AccountCode_dynamicItemDisplay"></ul>
+			<span id="addAccCodes" class="btn btn-primary" onclick="addAccCodes()">Add Account Code(s)</span>
+
+			<textarea id="AccountCodes" name="AccountCodes" class="form-control hidden" disabled
+				placeholder="Added Account Code(s)"></textarea>
 		</div>
 	</div>
-	<!--Account Code-->
-	<div class='col-sm-12 '>
-		<div class='form-group'>
-			<label for="ProjectString">Project String</label><span style="color: red;">*</span>
-			<div class="input-group">
-				<input type="text" class="form-control" name="ProjectString" id="ProjectString" pattern="\d{9}-?\d{5}"
-					min-length="30" maxlength="32">
-				<div class="input-group-addon"><span onclick="ProjectString()">add</span></div>
-			</div>
-			<div class="">
-				<textarea id="ProjectStrings" name="ProjectStrings" class="form-control" disabled
-					placeholder="Added Project String Codes"></textarea>
+	<!--Project String-->
+	<div class="row procurement_No">
+		<div class='col-sm-6 '>
+			<div class='form-group'>
+				<label for="ProjectString">Project String(s)</label><span style="color: red;">*</span>
+				<div class="input-group">
+					<input type="text" class="form-control" name="ProjectString" id="ProjectString" min-length="30"
+						maxlength="32">
+					<div class="input-group-addon"><span onclick="ProjectString()">add</span></div>
+				</div>
 			</div>
 		</div>
+		<div id="projectStringsDisplay" class="col-sm-6 hidden">
+			<ul id="ProjectString_dynamicItemDisplay"></ul>
+			<span id="addPjctStringCodes" class="btn btn-primary" onclick="addPjctStringCodes()">Add Project String(s)</span>
+
+			<textarea id="ProjectStrings" name="ProjectStrings" class="form-control hidden" disabled
+				placeholder="Added Project String Code(s)"></textarea>
+		</div>
+
 	</div>
 	<!--Contract #-->
 
-	<div class='col-sm-12'>
+	<div class='col-sm-12 procurement_No'>
 		<div class='form-group'>
 			<label for="ContractNumber">Contract #</label><span style="color: red;">*</span>
 			<input type="text" id="ContractNumber" class="form-control" name="ContractNumber">
@@ -336,7 +351,7 @@
 	</div>
 	<div class='col-sm-12'>
 		<div class='form-group'>
-			<label for="SpecialInstructions">Special Instructions</label><span style="color: red;">*</span>
+			<label for="SpecialInstructions">Special Instructions</label>
 			<textarea class="form-control" id="SpecialInstructions" name="SpecialInstructions"></textarea>
 		</div>
 	</div>
@@ -349,61 +364,94 @@
 		$("#ROW_Presenter").hide();
 		$("#ROW_CEQAVals").hide();
 		$("#ROW_EnvironmentalDetermination").hide();
+		$('.procurement_No').hide();
+
 		$("textarea").attr('rows', '5');
 		$('[data-toggle="tooltip"]').tooltip();
 
 		displayUsersSelect('internalUsers')
+		populateAuthor()
 	})
+	function selectElm(element) {
+		$('#' + element).select();
+	}
+	function addPresenters() {
+		$('#StaffPresenter').html('');
+		$('#dynamicItemDisplay').children('li').each(function (ind, val) {
+			var x = $(val).text();
+			$('#StaffPresenter').append(x + '\n')
+			$(val).addClass('text-success').css("font-weight", "600");
+		})
+		$('#addPresenters').html("Staff Presenter(s) Added")
+	}
 
-	$('#ProjectString').on("keyup", function (event) {
-		var ProjectString = $('#ProjectString').val();
-		var ProjectStringArr = []
-		console.log(ProjectString.length)
-		if (ProjectString.length == 30) {
-			//do we need to add in the hyphen
-			if (ProjectString.charAt(10) == "-" && ProjectString.charAt(20)) {
-				//do nothing they manually added in the hyphen
-				//no further work needed.
-			} else {
-				//add in the hyphen
-				for (var i = 0, charsLength = ProjectString.length; i < charsLength; i += 10) {
-					ProjectStringArr.push(ProjectString.substring(i, i + 10));
-					console.log(ProjectStringArr)
-				}
-				var x = ProjectStringArr[1].length
-				for (var i = 0, charsLength1 = x; i < charsLength1; i += 10) {
-					ProjectStringArr.push(ProjectString.substring(i, i + 10));
-					console.log(ProjectStringArr)
-				}
 
-				$('#ProjectString').val(ProjectStringArr[0] + '-' + ProjectStringArr[1] +'-' + ProjectStringArr[2])
+	function deleteItem(itemId) {
+		$('#' + itemId).remove();
+		addPjctStringCodes()
+		addAccCodes()
+		addPresenters()
+	}
+	/*
+		$('#ProjectString').on("keyup", function (event) {
+			var ProjectString = $('#ProjectString').val();
+			var ProjectStringArr = []
+			console.log(ProjectString.length)
+			if (ProjectString.length == 30) {
+				//do we need to add in the hyphen
+				if (ProjectString.charAt(10) == "-" && ProjectString.charAt(20)) {
+					//do nothing they manually added in the hyphen
+					//no further work needed.
+				} else {
+					//add in the hyphen
+					for (var i = 0, charsLength = ProjectString.length; i < charsLength; i += 10) {
+						ProjectStringArr.push(ProjectString.substring(i, i + 10));
+						console.log(ProjectStringArr)
+					}
+					var x = ProjectStringArr[1].length
+					for (var i = 0, charsLength1 = x; i < charsLength1; i += 10) {
+						ProjectStringArr.push(ProjectString.substring(i, i + 10));
+						console.log(ProjectStringArr)
+					}
+	
+					$('#ProjectString').val(ProjectStringArr[0] + '-' + ProjectStringArr[1] + '-' + ProjectStringArr[2])
+				}
 			}
-		}
-
-	});
-
+	
+		});
+	*/
 	function ProjectString() {
 		var x = $('#ProjectString').val();
 		if (x == '') {
 			alert("Please add in the proper Project String");
 		} else {
-			$('#ProjectStrings').append(x + '\n')
+			$('#ProjectString_dynamicItemDisplay').append("<li id='ac_" + x + "'>" + x + ' <span class="glyphicon glyphicon-trash text-danger" onclick="deleteItem(' + "'ac_" + x + "')" + '"></span></li>')
 			$('#ProjectString').select().focus();
-
+			$('#projectStringsDisplay').removeClass('hidden');
 		}
 	}
+	function addPjctStringCodes() {
+		$('#ProjectStrings').html('');
+		$('#ProjectString_dynamicItemDisplay').children('li').each(function (ind, val) {
+			var x = $(val).text();
+			$('#ProjectStrings').append(x + '\n')
+			$(val).addClass('text-success').css("font-weight", "600");
+		})
+		$('#addPjctStringCodes').html("Project Strings(s) Added")
+	}
+
 	$('#AccountCode').on("keyup", function (event) {
 		var accountCode = $('#AccountCode').val();
 		var accountCodeArr = []
-		if (accountCode.length == 14) {
+		if (accountCode.length == 13) {
 			//do we need to add in the hyphen
-			if (accountCode.charAt(9) == "-") {
+			if (accountCode.charAt(8) == "-") {
 				//do nothing they manually added in the hyphen
 				//no further work needed.
 			} else {
 				//add in the hyphen
-				for (var i = 0, charsLength = accountCode.length; i < charsLength; i += 9) {
-					accountCodeArr.push(accountCode.substring(i, i + 9));
+				for (var i = 0, charsLength = accountCode.length; i < charsLength; i += 8) {
+					accountCodeArr.push(accountCode.substring(i, i + 8));
 				}
 				$('#AccountCode').val(accountCodeArr[0] + '-' + accountCodeArr[1])
 			}
@@ -416,10 +464,20 @@
 		if (x == '') {
 			alert("Please add in the proper Account Code");
 		} else {
-			$('#AccountCodes').append(x + '\n')
+			$('#AccountCode_dynamicItemDisplay').append("<li id='ac_" + x + "'>" + x + ' <span class="glyphicon glyphicon-trash text-danger" onclick="deleteItem(' + "'ac_" + x + "')" + '"></span></li>')
+			$('#AccountCodesDisplay').removeClass('hidden');
 			$('#AccountCode').select().focus();
 
 		}
+	}
+	function addAccCodes() {
+		$('#AccountCodes').html('');
+		$('#AccountCode_dynamicItemDisplay').children('li').each(function (ind, val) {
+			var x = $(val).text();
+			$('#AccountCodes').append(x + '\n')
+			$(val).addClass('text-success').css("font-weight", "600");
+		})
+		$('#addAccCodes').html("Account Codes(s) Added")
 	}
 	var selectedBox = null;
 	$(".ContractSentSeparately").click(function () {
@@ -445,8 +503,20 @@
 	$(".ProcurementItem").click(function () {
 		selectedBox = this.id;
 		$(".ProcurementItem").each(function () { if (this.id == selectedBox) { this.checked = true; } else { this.checked = false; }; });
-	});
 
+		console.log(selectedBox)
+
+		if (selectedBox == 'ProcurementItemN') {
+			console.log('no')
+			$('.procurement_No').hide();
+		} else {
+			console.log('yes')
+
+			$('.procurement_No').show();
+
+		}
+	});
+	var staffPresenter = 1;
 	function clearForm() {
 		$('#StaffPresenter').html('');
 	}
@@ -456,13 +526,22 @@
 			//reject name and alert user
 			alert("Please enter a name and Title");
 		} else {
-			$('#StaffPresenter').append(x + "\n")
+			$('#dynamicItemDisplay').append("<li id='sp_" + staffPresenter + "'>" + x + ' <span class="glyphicon glyphicon-trash text-danger" onclick="deleteItem(' + "'sp_" + staffPresenter + "')" + '"></span></li>')
+			$('#addPresenters').html("Add Staff Presenter(s)")
+			$('#presentersDisplay').removeClass('hidden');
 			var x = $('#CustomName').val("Name - Title");
 		}
+		staffPresenter++
 	}
 	function selectUser(id) {
 		var x = $('#internalUsers').val();
-		$('#StaffPresenter').append(x + "\n")
+		$('#dynamicItemDisplay').append("<li id='sp_" + staffPresenter + "'>" + x + ' <span class="glyphicon glyphicon-trash text-danger" onclick="deleteItem(' + "'sp_" + staffPresenter + "')" + '"></span></li>')
+		$('#addPresenters').html("Add Staff Presenter(s)")
+		$('#presentersDisplay').removeClass('hidden');
+
+		staffPresenter++
+
+		//$('#StaffPresenter').append(x + "\n")
 	}
 
 	/*
@@ -618,15 +697,20 @@
 	}
 	function populateAuthor() {
 		var url = window.location.protocol + "//" + window.location.host + "/";
-
 		$.ajax({
 			type: "Get",
 			url: url + "api/user/list",
 			datatype: "json",
 			success: function (data) {
 				$.each(data, function (index, ele) {
+					console.log(ele)
 					if (ele.id == $("#OriginatorId").val()) {
-						$("#Author").val(ele.firstName + " " + ele.lastName + ", " + ele.position);
+						if (ele.position == '') {
+							$("#Author").val(ele.firstName + " " + ele.lastName);
+						} else {
+							$("#Author").val(ele.firstName + " " + ele.lastName + " - " + ele.position);
+
+						}
 					}
 				})
 			},
@@ -694,7 +778,6 @@
 			default:
 				$('#RecordationRequired ').val("0").change()
 				$('#PublicationRequired ').val("0").change()
-
 		}
 	}
 
