--- a/views/goodyear/Staff_Report_New.handlebars
+++ b/views/goodyear/Staff_Report_New.handlebars
@@ -128,7 +128,8 @@
 	<div class='col-sm-6'>
 		<div class='form-group'>
 			<label for="PublicationRequired">Publication Required</label><span style="color: red;">*</span>
-			<select id="PublicationRequired" name="PublicationRequired" class="form-control">
+			<select id="PublicationRequired" name="PublicationRequired" class="form-control"
+				onclick="PublicationRequired1()">
 				<option value="0">Choose One</option>
 				<option value="Yes">Yes</option>
 				<option value="No">No</option>
@@ -137,6 +138,22 @@
 		</div>
 	</div>
 </div>
+
+<div class="row PublicationRequired">
+	<div class='col-sm-6'>
+		<div class='form-group'>
+			<label for="HowManyTimes">How many times?</label>
+			<input type="number" name="HowManyTimes" id="HowManyTimes" class="form-control">
+		</div>
+	</div>
+	<div class='col-sm-6'>
+		<div class='form-group'>
+			<label for="PubSpecialInstructions">Publication Special Instructions</label>
+			<input type="text" name="PubSpecialInstructions" id="PubSpecialInstructions" class="form-control">
+		</div>
+	</div>
+</div>
+
 
 <br />
 <br />
@@ -294,6 +311,132 @@
 	</div>
 	<div class='col-sm-12'>
 		<div class='form-group'>
+			<label for="ItemAmendCityCode">Does Item Amend City Code?</label><span style="color: red;">*</span>
+			<input id="ItemAmendCityCodeY" type="checkbox" class="ItemAmendCityCode" name="ItemAmendCityCode"
+				value="Yes"> Yes
+			<input id="ItemAmendCityCodeN" type="checkbox" class="ItemAmendCityCode" name="ItemAmendCityCode"
+				value="No"> No
+		</div>
+	</div>
+	<div class='col-sm-12'>
+		<div class='form-group'>
+			<label for="ExhibitsRequireSignature">Exhibit(s) Require Signatures?</label><span
+				style="color: red;">*</span>
+			<input id="ExhibitsRequireSignatureY" type="checkbox" class="ExhibitsRequireSignature"
+				name="ExhibitsRequireSignature" value="Yes"> Yes
+			<input id="ExhibitsRequireSignatureN" type="checkbox" class="ExhibitsRequireSignature"
+				name="ExhibitsRequireSignature" value="No"> No
+		</div>
+	</div>
+	<div class='col-sm-12'>
+		<div class='form-group'>
+			<label for="RequiredSignatures">Required Signatures?</label><span style="color: red;">*</span><br>
+			<input id="RequiredSignaturesMayor" type="checkbox" name="RequiredSignatures" value="Mayor"> <label
+				for="RequiredSignaturesMayor"> Mayor</label><br>
+			<input id="RequiredSignaturesCityAttorney" type="checkbox" name="RequiredSignatures" value="City Attorney">
+			<label for="RequiredSignaturesCityAttorney"> City Attorney</label><br>
+			<input id="RequiredSignaturesCityManager" type="checkbox" name="RequiredSignatures" value="CityManager">
+			<label for="RequiredSignaturesCityManager"> City Manager</label><br>
+			<input id="RequiredSignaturesProcurement" type="checkbox" name="RequiredSignatures" value="Procurement">
+			<label for="RequiredSignaturesProcurement"> Procurement</label><br>
+			<input id="RequiredSignaturesCityClerk" type="checkbox" name="RequiredSignatures" value="City Clerk"> <label
+				for="RequiredSignaturesCityClerk"> City Clerk</label>
+
+		</div>
+	</div>
+	<div class='col-sm-12'>
+		<div class='form-group'>
+			<label for="TransmittalLetterRequired">Transmittal Letter Required?</label><span
+				style="color: red;">*</span>
+			<input id="TransmittalLetterRequiredY" type="checkbox" class="TransmittalLetterRequired"
+				name="ItemApproveContract" value="Yes"> Yes
+			<input id="TransmittalLetterRequiredN" type="checkbox" class="TransmittalLetterRequired"
+				name="ItemApproveContract" value="No"> No
+		</div>
+	</div>
+	<div class="row TransmittalLetterRequired_no form-group">
+		<div class="col-sm-12">
+			<label for="ContractNumber">Who will send Transmittal</label>
+		</div>
+		<div class="col-sm-12">
+			<input id="sendTransmittalDepartment" name="sendTransmittal" type="radio" value="Department"> <label for="sendTransmittalDepartment">Department</label><br>
+			<input id="sendTransmittalCityClerk" name="sendTransmittal" type="radio" value="City Clerk"> <label for="sendTransmittalCityClerk">City Clerk</label>
+		</div>
+	</div>
+	<div class="row TransmittalLetterRequired_no form-group">
+		<div class="col-sm-12">
+			<label for="TransmittalName">Transmittal Name</label>
+		</div>
+		<div class="col-sm-12">
+			<input type="text" id="TransmittalName" name="TransmittalName" class="form-control">
+		</div>
+	</div>
+	<div class="row TransmittalLetterRequired_no form-group">
+		<div class="col-sm-12">
+			<label for="TransmittalAddress">Transmittal Address</label>
+		</div>
+		<div class="col-sm-12">
+			<input type="text" id="TransmittalAddress" name="TransmittalAddress" class="form-control">
+		</div>
+	</div>
+	<div class="row TransmittalLetterRequired_no form-group">
+		<div class="col-sm-12">
+			<label for="">Transmittal City/State/Zip</label>
+		</div>
+		<div class="col-sm-4">
+			<input type="text" id="City" name="City" class="form-control" placeholder="City">
+		</div>
+		<div class="col-sm-4">
+			<input type="text" id="State" name="State" class="form-control" placeholder="State">
+		</div>
+		<div class="col-sm-4">
+			<input type="text" id="Zip" name="Zip" class="form-control" placeholder="Zip">
+		</div>
+	</div>
+	<div class="row TransmittalLetterRequired_no form-group">
+		<div class="col-sm-12">
+			<label for="TransmittalPhone">Transmittal Phone</label>
+		</div>
+		<div class="col-sm-12">
+			<input type="text" id="TransmittalPhone" name="TransmittalPhone" class="form-control">
+		</div>
+	</div>
+	<div class="row TransmittalLetterRequired_no form-group">
+		<div class="col-sm-12">
+			<label for="TransmittalEmail">Transmittal Email</label>
+		</div>
+		<div class="col-sm-12">
+			<input type="email" id="TransmittalEmail" name="TransmittalEmail" class="form-control">
+		</div>
+	</div>
+	<div class="row TransmittalLetterRequired_no form-group">
+		<div class="col-sm-12">
+			<label for="TransmittalDepartmentContact">Department Contact</label>
+		</div>
+		<div class="col-sm-12">
+			<input type="text" id="TransmittalDepartmentContact" name="TransmittalDepartmentContact" class="form-control">
+		</div>
+	</div>
+
+	<div class='col-sm-12'>
+		<div class='form-group'>
+			<label for="ItemApproveContract">Does Item Approve a Contract?</label><span style="color: red;">*</span>
+			<input id="ItemApproveContractY" type="checkbox" class="ItemApproveContract" name="ItemApproveContract"
+				value="Yes"> Yes
+			<input id="ItemApproveContractN" type="checkbox" class="ItemApproveContract" name="ItemApproveContract"
+				value="No"> No
+		</div>
+	</div>
+	<div class="row ItemApproveContract_no form-group">
+		<div class="col-sm-12">
+			<label for="ContractNumber">Contract #</label>
+		</div>
+		<div class="col-sm-12">
+			<input type="text" id="ContractNumber" name="ContractNumber" class="form-control">
+		</div>
+	</div>
+	<div class='col-sm-12'>
+		<div class='form-group'>
 			<label for="ProcurementItem">Procurement Item?</label><span style="color: red;">*</span>
 			<input id="ProcurementItemY" type="checkbox" class="ProcurementItem" name="ProcurementItem" value="Yes"> Yes
 			<input id="ProcurementItemN" type="checkbox" class="ProcurementItem" name="ProcurementItem" value="No"> No
@@ -334,7 +477,8 @@
 		</div>
 		<div id="projectStringsDisplay" class="col-sm-6 hidden">
 			<ul id="ProjectString_dynamicItemDisplay"></ul>
-			<span id="addPjctStringCodes" class="btn btn-primary" onclick="addPjctStringCodes()">Add Project String(s)</span>
+			<span id="addPjctStringCodes" class="btn btn-primary" onclick="addPjctStringCodes()">Add Project
+				String(s)</span>
 
 			<textarea id="ProjectStrings" name="ProjectStrings" class="form-control hidden" disabled
 				placeholder="Added Project String Code(s)"></textarea>
@@ -355,8 +499,27 @@
 			<textarea class="form-control" id="SpecialInstructions" name="SpecialInstructions"></textarea>
 		</div>
 	</div>
+	<div class='col-sm-12'>
+		<div class='form-group'>
+			<label for="PrevRelatedDocumentNumber">Previously Related Document Number(s)</label>
+			<textarea class="form-control" id="PrevRelatedDocumentNumber" name="PrevRelatedDocumentNumber"></textarea>
+		</div>
+	</div>
 </div>
-
+<br />
+<br />
+<legend>
+	City Clerk Use Only
+</legend>
+<!-- • Date Recorded: mm/dd/yyyy
+• Publication Date #1: mm/dd/yyyy
+• Publication Date #2: mm/dd/yyyy
+• Posting Date: mm/dd/yyyy
+• Date Sent to Records: mm/dd/yyyy
+• File #: (free-form text)
+• Request Voided? Y/N
+• Item Tabled? Y/N
+• Future Tabled Date: mm/dd/yyyy -->
 <script>
 	var url = window.location.protocol + "//" + window.location.host + "/",
 		department = [];
@@ -365,6 +528,9 @@
 		$("#ROW_CEQAVals").hide();
 		$("#ROW_EnvironmentalDetermination").hide();
 		$('.procurement_No').hide();
+		$('.ItemApproveContract_no').hide();
+		$('.TransmittalLetterRequired_no').hide();
+		$('.PublicationRequired').hide();
 
 		$("textarea").attr('rows', '5');
 		$('[data-toggle="tooltip"]').tooltip();
@@ -499,6 +665,46 @@
 	$(".ExhibitRequiresSignature").click(function () {
 		selectedBox = this.id;
 		$(".ExhibitRequiresSignature").each(function () { if (this.id == selectedBox) { this.checked = true; } else { this.checked = false; }; });
+	});//
+	$(".ItemAmendCityCode").click(function () {
+		selectedBox = this.id;
+		$(".ItemAmendCityCode").each(function () { if (this.id == selectedBox) { this.checked = true; } else { this.checked = false; }; });
+	});
+	$(".ExhibitsRequireSignature").click(function () {
+		selectedBox = this.id;
+		$(".ExhibitsRequireSignature").each(function () { if (this.id == selectedBox) { this.checked = true; } else { this.checked = false; }; });
+	});
+	$(".TransmittalLetterRequired").click(function () {
+		selectedBox = this.id;
+		$(".TransmittalLetterRequired").each(function () { if (this.id == selectedBox) { this.checked = true; } else { this.checked = false; }; });
+
+		console.log(selectedBox)
+
+		if (selectedBox == 'TransmittalLetterRequiredN') {
+			console.log('no')
+			$('.TransmittalLetterRequired_no').hide();
+		} else {
+			console.log('yes')
+
+			$('.TransmittalLetterRequired_no').show();
+
+		}
+	});
+	$(".ItemApproveContract").click(function () {
+		selectedBox = this.id;
+		$(".ItemApproveContract").each(function () { if (this.id == selectedBox) { this.checked = true; } else { this.checked = false; }; });
+
+		console.log(selectedBox)
+
+		if (selectedBox == 'ItemApproveContractN') {
+			console.log('no')
+			$('.ItemApproveContract_no').hide();
+		} else {
+			console.log('yes')
+
+			$('.ItemApproveContract_no').show();
+
+		}
 	});
 	$(".ProcurementItem").click(function () {
 		selectedBox = this.id;
@@ -779,8 +985,24 @@
 				$('#RecordationRequired ').val("0").change()
 				$('#PublicationRequired ').val("0").change()
 		}
+		if ($('#PublicationRequired ').val("Yes")) {
+			PublicationRequired1(true);
+		}
 	}
+	function PublicationRequired1(value) {
+		console.log('hi')
+		if (value) {
+			$('.PublicationRequired').show();
+		} else {
+			$('.PublicationRequired').hide();
+		}
+		if ($('#PublicationRequired').val() == "Yes") {
+			$('.PublicationRequired').show();
+		} else {
+			$('.PublicationRequired').hide();
+		}
 
+	}
 	function ceqaReview() {
 		if ($("#CEQAReview").is(':checked')) {
 			$("#ROW_CEQAVals").show();
